Final Changes Proj 3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h2>Signup for our newsletter</h2>
     <p>Get the latest news on how your code is doing right in your inbox</p>
     <hr class="line">
+    <hr class="line-2">
 
   </div>
 
@@ -101,8 +102,8 @@
     <input type="radio" id="html-format" value="html-format" name="format"><label for="html-format"> HTML</label><br><br>
     <input type="radio" id="plain-format" value="plain-format" name="format"><label for="plain-format"> Plain text</label><br><br>
 
-    <p>Other topics you'd like to hear about</p>
-    <textarea name="comment"></textarea>
+    <label for="comment">Other topics you'd like to hear about</label><br><br>
+    <textarea name="other_topics" id="comment"></textarea>
 
     <button type="submit" class="signup">Sign Up</button>
 
